kubernetes/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carabia-deployment
  namespace: prod

spec:
  replicas: 2

  selector:
    matchLabels:
      app: carabia

  template:
    metadata:
      labels:
        app: carabia

    spec:
      serviceAccountName: carabia-sa

      containers:
        - name: carabia-container
          image: 836479504031.dkr.ecr.eu-west-1.amazonaws.com/carabia-ecr:f31a0d28f6fe50df9a95bd90addbf42762dfc5cc
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          volumeMounts:
            - name: dataprotection-keys
              mountPath: /mnt/dataprotection-keys

      volumes:
        - name: dataprotection-keys
          persistentVolumeClaim:
            claimName: carabia-dataprotection-pvc
