kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carabia-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: carabia
  ports:
    - port: 80
      targetPort: 80
